# llm-collusion

./: .gitignore  CROSS_MODEL_DETECTION_RESULTS.md  README.md  cross_model_detection.py  full_attribution.py  generate_pairs.py  model_attribution.py  pyproject.toml  run_tests.py  self_recognition.py  target_identification.py
configs/: config.yaml
data/: code_pairs-20251023-224335.jsonl  code_pairs-20251024-010142.jsonl  code_pairs.jsonl  mbpp-20251024-200551.jsonl  mbpp-20251024-222744.jsonl  mbpp-20251025-190103.jsonl  mbpp-20251025-194940.jsonl  mbpp-20251025-195222.jsonl  mbpp-20251025-210611.jsonl  mbpp-20251025-220244.jsonl  mbpp-20251025-222845.jsonl  mbpp-20251026-001850.jsonl  self_recognition-20251024-004936.jsonl  self_recognition.jsonl
data/results/: self_recognition-mbpp-20251025-200730.jsonl  self_recognition-mbpp-20251025-202538.jsonl  self_recognition-mbpp-20251025-211652.jsonl  self_recognition-mbpp-20251026-002624.jsonl  unit_eval-mbpp-20251025-210611-20251025-211919.jsonl  unit_eval-mbpp-20251026-001850-20251026-002124.jsonl
notebooks/: analyze_judgments.ipynb  cross_model_detection_analysis.ipynb  evaluate_all_attribution_tasks.ipynb  evaluate_full_attribution.ipynb  evaluate_model_attribution.ipynb  evaluate_self_recognition.ipynb  test_stats.ipynb  train_self_recognition.ipynb
prompts/: cross_model_detection.md  generation.md  generation.yaml  generation_v2.md  self_recognition.md  self_recognition.yaml
prompts/generation/: ds1000.md  humaneval.md  mbpp.md
prompts/model_attribution/: full_attribution.md  target_identification.md
src/clients/: __init__.py
src/common/: types.py  utils.py
src/core/: __init__.py
src/datasets/: __init__.py  ds1000.py  humaneval.py  mbpp.py
src/generation/: __init__.py  base.py  mbpp.py  (+2 more)
utils/: io.py  openai_client.py  prompts.py
(+102 files in other folders)
