[tool.poetry]
name = "llm-collusion"
version = "0.1.0"
description = "Minimal scaffold to generate code pairs via OpenRouter and benchmarks"
readme = "README.md"
packages = [
  { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.20.0"
pyyaml = "^6.0.3"
tqdm = "^4.67.1"
rich = "^14.2.0"
requests = "^2.32.5"
datasets = "^4.3.0"
python-dotenv = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
